--- a/phonesensor/src/main/res/menu/menu_settings.xml
+++ b/phonesensor/src/main/res/menu/menu_settings.xml
@@ -2,9 +2,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ActivityTest">
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:icon="@drawable/icon_settings_dark"
-        android:showAsAction="ifRoom" />
+        android:title="menu"
+        android:showAsAction="ifRoom"
+        >
+    <menu>
+        <item
+            android:id="@+id/action_settings"
+            android:icon="@drawable/icon_settings_dark"
+            android:title="Settings" />
+        <item
+            android:id="@+id/action_about"
+            android:title="About"
+            android:icon="@drawable/about"/>
+        <item
+            android:id="@+id/action_copyright"
+            android:title="Copyright"
+            android:icon="@drawable/copyright"/>
 
+    </menu>
+    </item>
 </menu>
