--- a/phonesensor/src/main/res/layout/activity_phone_sensor.xml
+++ b/phonesensor/src/main/res/layout/activity_phone_sensor.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Service"
             android:textColor="@color/amber_900" />
 
@@ -37,7 +37,7 @@
             android:id="@+id/textViewTime"
             android:textSize="40dp"
             android:background="@drawable/circle_border"
-            android:textColor="@color/WHITE"
+            android:textColor="@drawable/textview_click"
             android:gravity="center_vertical|center_horizontal"
             android:layout_gravity="center_horizontal"
             android:minWidth="200dp"
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Configured Sensors"
             android:textColor="@color/amber_900" />
 
