--- a/phonesensor/src/main/res/layout/activity_phonesensor_settings.xml
+++ b/phonesensor/src/main/res/layout/activity_phonesensor_settings.xml
@@ -1,35 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:layout_height="fill_parent">
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+    <include
+        android:id="@+id/layout_two_button"
+        layout="@layout/layout_two_button" />
+
 
     <LinearLayout
+        android:id="@+id/layout_preference_fragment"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/button_settings_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.5"
-            android:text="Cancel" />
-
-        <Button
-            android:id="@+id/button_settings_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.5"
-            android:text="Save" />
-
-    </LinearLayout>
-
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_above="@id/layout_two_button"
+        android:orientation="vertical" />
+</RelativeLayout>
