--- a/phonesensor/src/main/res/layout/activity_phonesensor_settings.xml
+++ b/phonesensor/src/main/res/layout/activity_phonesensor_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <include
         android:id="@+id/layout_two_button"
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/layout_preference_fragment"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@id/layout_two_button"
         android:orientation="vertical" />
 </RelativeLayout>
