--- a/phonesensor/src/main/res/layout/activity_main.xml
+++ b/phonesensor/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <TableLayout
                 android:id="@+id/tableLayout"
