--- a/phonesensor/src/main/res/layout/activity_phonesensor_settings.xml
+++ b/phonesensor/src/main/res/layout/activity_phonesensor_settings.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:id="@+id/layout_preference_fragment"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/layout_two_button"
         android:orientation="vertical" />
