--- a/phonesensor/src/main/res/layout/activity_main.xml
+++ b/phonesensor/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:id="@+id/scrollView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:layout_margin="10dp">
 
             <TableLayout
                 android:id="@+id/tableLayout"
